--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const authors = Object.keys(tree).sort();
 	
 	<div class="grid">
 		{authors.map((author) => (
-			<a href={`/${author}`} class="card">
+			<a href={`/${author}/`} class="card">
 				<h2 style="font-size: 1.25rem;">{author}</h2>
 				<p style="color: var(--text-secondary);">
 					{Object.keys(tree[author]).length} Book{Object.keys(tree[author]).length !== 1 ? 's' : ''}
