--- a/src/pages/[author]/index.astro
+++ b/src/pages/[author]/index.astro
@@ -1,13 +1,13 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import { getGroupedAnnotations } from '../../db';
+import Layout from "../../layouts/Layout.astro";
+import { getGroupedAnnotations } from "../../db";
 
 export function getStaticPaths() {
-  const tree = getGroupedAnnotations();
-  return Object.keys(tree).map((author) => ({
-    params: { author },
-    props: { books: Object.keys(tree[author]), tree: tree },
-  }));
+	const tree = getGroupedAnnotations();
+	return Object.keys(tree).map((author) => ({
+		params: { author },
+		props: { books: Object.keys(tree[author]), tree: tree },
+	}));
 }
 
 const { author } = Astro.params;
@@ -15,21 +15,28 @@ const { books, tree } = Astro.props;
 ---
 
 <Layout title={`${author} | Books`}>
-	<div style="margin-bottom: 2rem;">
-		<a href="/" style="font-size: 0.9rem;">&larr; Back to Authors</a>
-	</div>
+	<a
+		slot="back-button"
+		href="/"
+		style="font-size: 1.25rem; text-decoration: none; color: var(--text-secondary);"
+		title="Back to Authors">&larr;</a
+	>
+	<span slot="header-title" class="header-context">{author}</span>
 
 	<h1>{author}</h1>
 
 	<div class="grid">
-		{books.map((book) => (
-			<a href={`/${author}/${book}/`} class="card">
-				<h2 style="font-size: 1.25rem;">{book}</h2>
-				<p style="color: var(--text-secondary);">
-					{tree[author][book].length} Annotation{tree[author][book].length !== 1 ? 's' : ''}
-				</p>
-			</a>
-		))}
+		{
+			books.map((book) => (
+				<a href={`/${author}/${book}/`} class="card">
+					<h2 style="font-size: 1.25rem;">{book}</h2>
+					<p style="color: var(--text-secondary);">
+						{tree[author][book].length} Annotation
+						{tree[author][book].length !== 1 ? "s" : ""}
+					</p>
+				</a>
+			))
+		}
 	</div>
 </Layout>
 
