--- a/src/pages/[dbName]/[author]/index.astro
+++ b/src/pages/[dbName]/[author]/index.astro
@@ -21,7 +21,7 @@ const books = Object.keys(tree[author]);
     <a
         slot="back-button"
         href={`/${dbName}/`}
-        style="font-size: 1.25rem; text-decoration: none; color: var(--text-secondary);"
+        class="back-button"
         title="Back to Authors">&larr;</a
     >
     <span slot="header-title" class="header-context">{author}</span>
