--- a/src/pages/[dbName]/index.astro
+++ b/src/pages/[dbName]/index.astro
@@ -16,7 +16,7 @@ const authors = Object.keys(tree).sort();
 	<a
 		slot="back-button"
 		href="/"
-		style="font-size: 1.25rem; text-decoration: none; color: var(--text-secondary);"
+		class="back-button"
 		title="Back to Backup Selection">&larr;</a
 	>
 	<h1>Authors</h1>
